--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,3 +64,57 @@ nav a {
   text-decoration: none;
   color: var(--primary-color);
 }
+
+h3 {
+  text-align: center;
+  font-size: 34px;
+}
+
+p {
+  text-align: center;
+  margin: 5px;
+}
+
+.pictures {
+  list-style: none;
+  text-align: center;
+}
+
+.pictures li {
+  width: 40%;
+  display: inline-block;
+  position: relative;
+  text-align: center;
+}
+img {
+  max-width: 100%;
+}
+
+.join {
+  text-align: center;
+}
+
+.text_section_2 {
+  margin-top: 20px;
+}
+
+input {
+  width: 20%;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+.submit {
+  background-color: var(--accent-color);
+  font-weight: bold;
+}
+
+.submit:hover {
+  background-color: var(--primary-color);
+  font-weight: bold;
+}
+
+footer {
+  font-size: 15px;
+  margin-top: 10px;
+}
